<resources>

    <string name="maincontent">欢迎使用大学助手</string>
    <string name="app_name">大学助手</string>
    <string name="title_activity_main">大学助手</string>
    <string name="home">主界面</string>
    <string name="function_guide">功能向导</string>
    <string name="contact_us">联系我们</string>
    <string name="class_assistant">上课助手</string>
    <string name="positive">励志</string>
    <string name="health">健康助手</string>
    <string name="weather_forecast">冷暖预知</string>
    <string name="nocontent">不好意思哦，木有数据</string>
    <string name="ca_mian_edit">课表编辑</string>
    <string name="ca_setting">设置</string>
    <string name="ca_help">帮助</string>
    <string name="ca_classhour_edit">时间表编辑</string>
    <string name="ca_schedule_edit">课程表编辑</string>
    <string name="ca_main">课表</string>
    <string name="class_hour_name">课时名</string>
    <string name="address">地点</string>
    <string name="start_time">上课时间</string>
    <string name="end_time">下课时间</string>
    <string name="add_classhour">添加课时</string>
    <string name="classhour_input_hint">例”早读“</string>
    <string name="classhour_edit_item_hourtime_hint">08</string>
    <string name="classhour_edit_item_minutetime_hint">00</string>
    <string name="classhour_edit_item_time_separator">:</string>
    <string name="classhour_edit_item_edit">编辑</string>
    <string name="classhour_edit_item_save">确定/保存</string>
    <string name="classhour_edit_item_update">更新</string>
    <string name="classhour_edit_item_delete">删除</string>
    <string name="toast_landscape">为了方便您输入信息，系统已经为您自动设置横屏显示。</string>
    <string name="manipulate">操作按钮</string>
    <string name="classname">科目</string>
    <string name="off">状态：关闭</string>
    <string name="on">状态：开启</string>
    <string name="class_mode_setting">上课情景模式</string>
    <string name="mode_choose">模式选择</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="mode_choose_summary">选择您需要的上课情景模式</string>
    <string name="class_lock_setting">上课锁闭手机</string>
    <string name="lock_off">专心听课，锁闭手机，远离诱惑</string>
    <string name="lock_on">上课自动锁机，输入密码可开启</string>
    <string name="input_lock_password">请输入开锁密码</string>
    <string name="input_pre_time">输入提前时间（分钟）</string>
    <string name="class_clock_setting">上课提醒设置</string>
    <string name="period_separator">--</string>
    <string name="subject">科目</string>
    <string name="clear">清除</string>
    <string name="save">保存</string>
    <string name="class_mode">上课模式设置</string>
    <string name="class_mode_summary">选择您上课的手机状态</string>
    <string name="clock_title">提醒设置</string>
    <string name="clock_mode_summary">选择提醒您上课的方式</string>
    <string name="clock_mode_choose_summary">请选择您的提醒方式</string>
    <string name="ringtone_choose">请选择您的提醒铃声</string>
    <string name="ringtone_setting">铃声设置</string>
    <string name="class_name">课时</string>
    <string name="class_alarm">上课提醒</string>
    <string name="keyguard_line1">上课助手提醒您: </string>
    <string name="keyguard_line2">专心听课!</string>
    <string name="keyguard_line3">请勿玩弄手机!</string>
    <string name="keyguard_line4">注:如有特殊事情,输入密码开锁:</string>
    <string name="password">请输入开锁密码</string>
    <string name="unlock">开锁</string>
    <string name="click_unlock">点击开锁</string>
    <string name="start">开始成功快乐的大学生活</string>
    <string name="click_input">点击输入</string>
</resources>