<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
   
    <CheckBoxPreference 
    	android:defaultValue="true" 
    	android:summaryOff="@string/off" 
    	android:summaryOn="@string/on" 
    	android:key="class_mode_setting" 
    	android:title="@string/class_mode_setting"
    	android:disableDependentsState="false">
    </CheckBoxPreference>   
	<ListPreference 
		android:dialogTitle="@string/mode_choose" 
		android:entryValues="@array/class_mode_keys" 
		android:entries="@array/class_mode_values" 
		android:positiveButtonText="@string/ok" 
		android:negativeButtonText="@string/cancle" 
		android:dependency="class_mode_setting" 
		android:title="@string/mode_choose" 
		android:summary="@string/mode_choose_summary" 
		android:key="mode_choose"
		android:defaultValue="0">
	</ListPreference>
	
	
	 <CheckBoxPreference 
    	android:defaultValue="false" 
    	android:summaryOff="@string/lock_off" 
    	android:summaryOn="@string/lock_on" 
    	android:key="class_lock_setting" 
    	android:title="@string/class_lock_setting"
    	android:disableDependentsState="false">
    </CheckBoxPreference> 
	
	 <EditTextPreference android:key="lock_password"
	     android:title="@string/input_lock_password"
	     android:dependency="class_lock_setting">	     
	 </EditTextPreference>
	 
	 
	 
	 
	  <CheckBoxPreference 
    	android:defaultValue="true" 
    	android:summaryOff="@string/off" 
    	android:summaryOn="@string/on" 
    	android:key="class_clock_setting" 
    	android:title="@string/class_clock_setting"
    	android:disableDependentsState="false">
    </CheckBoxPreference> 
	
	 <EditTextPreference android:key="pre_time"
	     android:title="@string/input_pre_time"
	     android:dependency="class_clock_setting"
	     android:inputType="number">	     
	 </EditTextPreference>
	 	
</PreferenceScreen>
