<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/classhour_edite_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_bottom"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/class_hour_name" 
            android:textSize="18sp"
                android:padding="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_bottom"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/start_time"
            android:textSize="18sp"
                android:padding="3dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_bottom"
            android:ellipsize="end"
            android:gravity="center"
            android:textSize="18sp"
                android:padding="3dp"
            android:singleLine="true"
            android:text="@string/end_time" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manipulate"
            android:gravity="center"
            android:textSize="18sp"
                android:padding="3dp"
                android:singleLine="true"/>
    </LinearLayout>

</LinearLayout>