<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:orientation="vertical" 
        android:id="@+id/root">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/class_hour_name"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"               
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true" 
                android:background="@drawable/textview_bottom"/>

            <TextView
                android:text="@string/classname"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                 android:background="@drawable/textview_bottom" />

            <TextView
                android:text="@string/address"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                 android:background="@drawable/textview_bottom" />
             <TextView
                android:text="@string/manipulate"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true" 
                 android:background="#20000505"/>
            
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>