<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <!-- 课时名编辑 -->

    <EditText
        android:id="@+id/classhour_edit_item_name"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:hint="@string/classhour_input_hint"
        android:inputType="text"
        android:background="@drawable/textview_bottom"
        android:singleLine="true"
         />

  

    <view 
        android:clickable="true"
        android:id="@+id/begin"
        class="com.ly.university.assistant.TimePickerTextView"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:background="@drawable/textview_bottom"
        android:text="@string/classhour_edit_item_time_separator" />

   

  
    <view
        android:clickable="true"
        android:id="@+id/end"
        class="com.ly.university.assistant.TimePickerTextView"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:background="@drawable/textview_bottom"
        android:text="@string/classhour_edit_item_time_separator" />


    <ImageButton
        android:id="@+id/classhour_edit_item_save"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/classhour_edit_item_save"
        android:src="@drawable/save" />

</LinearLayout>