<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header">

        <TextView
            style="@style/DialogText.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:background="@drawable/title"
            android:minWidth="40dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:singleLine="true"
            android:text="@string/class_alarm"
            android:textColor="#e0ff0000"/>
    </LinearLayout>

     <view
        class="com.ly.university.assistant.AlwaysFocusedTextView"
        android:id="@+id/alarm_message"
        android:focusable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="#e0ff2f4f"
        android:textColorLink="@color/honeycombish_blue"
        android:textSize="8pt"
        android:textStyle="bold|italic" 
        android:layout_margin="10dp"/>
     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/class_name"
                android:textColor="#40835e" />

            <TextView
                android:id="@+id/classname"
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dip"
                android:textColor="#40835e"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:gravity="center"
                android:text="@string/subject" />

            <TextView
                android:id="@+id/subject"
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:padding="2dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:gravity="center"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address"
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:padding="2dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:gravity="center"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/start_time"
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:padding="2dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:gravity="center"
                android:text="@string/end_time" />

            <TextView
                android:id="@+id/end_time"
                style="@style/DialogText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#40835e" 
                android:padding="2dip" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/footer"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/button_backgroud"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#0000ff"
            android:text="@string/ok" />
    </RelativeLayout>

</LinearLayout>